--- a/.env_example
+++ b/.env_example
@@ -1,3 +1,3 @@
 ENV=dev
 PORT=3000
-URL_DB=
+URL_DB=mongodb+srv://<<USER>>:<<PASSWORD>>@cluster0.edgr1.mongodb.net/<<DB>>?retryWrites=true&w=majority
