--- a/api/package.json
+++ b/api/package.json
@@ -35,7 +35,8 @@
 		"eslint": "^7.17.0",
 		"eslint-config-prettier": "^7.1.0",
 		"eslint-plugin-prettier": "^3.3.1",
-		"nodemon": "^2.0.7",
+		"kill-port": "^1.6.1",
+		"nodemon": "^2.0.2",
 		"prettier": "^2.2.1"
 	}
 }
