--- a/api/package.json
+++ b/api/package.json
@@ -24,6 +24,7 @@
 		"dotenv": "^8.2.0",
 		"esm": "^3.2.25",
 		"express": "^4.17.1",
+		"joi": "^17.3.0",
 		"moment": "^2.29.1",
 		"mongodb": "^3.6.3",
 		"mongoose": "^5.11.12",
