--- a/api/.env_example
+++ b/api/.env_example
@@ -1,3 +1,15 @@
 ENV=dev
 PORT=3000
 URL_DB=mongodb+srv://<<USER>>:<<PASSWORD>>@cluster0.edgr1.mongodb.net/<<DB>>?retryWrites=true&w=majority
+DEBUG=0
+
+JWT_EXPIRATION=
+JWT_PASS=
+
+SPOTIFY_CLIENT_ID=
+SPOTIFY_CLIENT_SECRET=
+
+YOUTUBE_API_KEY=
+YOUTUBE_VIDEO_BASE_URL=https://www.youtube.com/watch?v=
+
+API_LYRICS_URL=https://api.lyrics.ovh/v1/
