--- a/api/package.json
+++ b/api/package.json
@@ -33,7 +33,7 @@
 		"passport": "^0.4.1",
 		"passport-jwt": "^4.0.0",
 		"passport-local": "^1.0.0",
-		"simple-youtube-api": "^5.2.1"
+		"scrape-youtube": "^2.0.7"
 	},
 	"devDependencies": {
 		"eslint": "^7.17.0",
