--- a/api/package.json
+++ b/api/package.json
@@ -29,6 +29,7 @@
 		"moment": "^2.29.1",
 		"mongodb": "^3.6.3",
 		"mongoose": "^5.11.12",
+		"mongoose-autopopulate": "^0.12.3",
 		"node-spotify-api": "^1.1.1",
 		"passport": "^0.4.1",
 		"passport-jwt": "^4.0.0",
